FIX: literally nothing works but have to commit to try another thing in another branch

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
 @import "flatpickr/dist/flatpickr";
 @import "select2/dist/css/select2";
 @import "mapbox-gl/dist/mapbox-gl";
+@import "bootstrap/dist/css/bootstrap";
 
 // Your CSS partials
 @import "components/index";
