--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <%= render 'shared/navbar' %>
+    <%= render partial: 'shared/navbar', locals: { chatroom: @chatroom, message: @message } %>
     <%= render 'shared/flashes' %>
 
     <%= yield %>
