--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,14 @@
           <%= link_to 'All Athletes', athletes_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Messages", chatroom_path(current_user.team.chatroom_id), class: "nav-link mr-2" %>
+          <div class="dropdown messages-dropdown">
+          <%= link_to "Messages", chatroom_path(current_user.team.chatroom_id), method: :get, remote: true, class: "nav-link mr-2 dropdown-toggle" , id: "navbarMessagesDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <div class="dropdown-menu messages-dropdown-menu dropdown-menu-right" aria-labelledby="navbarMessagesDropdown">
+              <div class='show.bs.dropdown'>
+                <%= render partial: 'chatrooms/chatroom', locals: { chatroom: chatroom, message: message }   %>
+              </div>
+              </div>
+            </div>
         </li>
         <li class="nav-item dropdown">
           <%= image_tag "icon.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
