--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,5 @@
-<div class="event-show mt-5">
-  <div class="pt-5">
+<div class="event-show mt-5 mb-8">
+  <div class="pt-5 mb-8">
 
     <div class="d-flex justify-content-center">
       <p class="event-show-header mr-4">
@@ -17,7 +17,7 @@
       </p>
     </div>
 
-    <div class="event-show-middle p-3 d-flex justify-content-around">
+    <div class="event-show-middle p-3 d-flex justify-content-around mb-4">
       <% schedule_event = ScheduleEvent.find_by event: @event, schedule: @schedule %>
       <% team_members = [] %>
       <% current_user.team.users.each do |user| %>
@@ -141,20 +141,11 @@
       <% end %>
     </ul>
 
-    <div class="notes-form pb-5">
+    <div class="notes-form pb-5 mb-8" style="margin-bottom: 150px">
       <%= simple_form_for([@event, @note]) do |f| %>
       <%= f.input :content, label: "NOTES" %>
       <%= f.submit "Add Notes", class: "btn notes-btn" %>
       <% end %>
-    </div>
-
-    <div class="assignedform pb-5">
-      <% schedule_event = ScheduleEvent.find_by event: @event, schedule: @schedule %>
-      <% team_members = [] %>
-      <% current_user.team.users.each do |user| %>
-      <% team_members << (@user = user.first_name) if user.unavailable_days.map { |ud_hash| ud_hash[:date] }.exclude?(@event.start_date) %>
-      <% end %>
-      <%= render partial: 'shared/assignedform', locals: { event: @event, schedule: @schedule, schedule_event: schedule_event, team_members: team_members} %>
     </div>
   </div>
 </div>
