FEAT: dashboard partly restyled & table sortable but still buggy

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -12,7 +12,7 @@
       </li>
     </ul>
 
-    <div class="tab-content vh-100 pb-5" id="myTabContent" style="background-color: white;">
+    <div class="tab-content pb-5" id="myTabContent" style="background-color: white; background-attachment: fixed;">
 
       <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
         <div class="row py-3">
