--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,7 +11,7 @@
 @import "flatpickr/dist/flatpickr";
 @import "select2/dist/css/select2";
 @import "mapbox-gl/dist/mapbox-gl";
-@import "bootstrap/dist/css/bootstrap";
+// @import "bootstrap/dist/css/bootstrap";
 
 // Your CSS partials
 @import "components/index";
