--- a/app/assets/stylesheets/recruits/index.scss
+++ b/app/assets/stylesheets/recruits/index.scss
@@ -37,13 +37,30 @@
 .recruit-index-table {
   background-color: transparent;
 
+  a {
+    color: #707070;
+  }
+
   h1 {
-    font-size: 45px;
+    font-size: 50px;
     text-align: center;
     margin-bottom: 5px;
+  }
+  .gen-sch {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    font-size: 0.875rem;
+    background-color: #d57149;
+    color: #fff5ea;
+    text-align: center;
 
-    .btn-flat {
-      border-top-left-radius: 0;
+    &:hover {
+      background-color: #e89f71;
+    }
+  }
+
+  .full-li {
+    border-top-left-radius: 0;
     border-bottom-left-radius: 0;
     font-size: 0.875rem;
     background-color: #d57149;
@@ -53,6 +70,18 @@
     &:hover {
       background-color: #e89f71;
       }
+    }
+
+  .btn-flat {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    font-size: 0.875rem;
+    background-color: #d57149;
+    color: #fff5ea;
+    text-align: center;
+
+  &:hover {
+    background-color: #e89f71;
+    }
   }
-}
 }
