--- a/app/views/athletes/_athletes.html.erb
+++ b/app/views/athletes/_athletes.html.erb
@@ -1,31 +1,23 @@
-<div class='my-3 athlete-index-card'>
-<div class="my-3 container athlete-index-table">
+<div class='mt-3 mb-5 athlete-index-card'>
+<div class="mt-3 mb-5 container athlete-index-table">
 
-<!--   <h1>Top <%= current_user.team.sport.name  %> Athletes</h1>
-
-
-  <div class='input-group-prepend'>
-        <%= render 'shared/search' %>
-  </div>
-
-  <div class="table-responsive"> -->
+  <div class="table-responsive">
 
   <table class="table table-striped table-hover table-sm" style="width: 100%" id="dashboard_athlete">
     <h1>Top <%= current_user.team.sport.name  %> Athletes</h1>
     <thead>
         <th>Name</th>
-        <th>Graduation Year</th>
+        <th class="text-center">Graduation Year</th>
         <th>Nationality</th>
         <th>Rating</th>
         <th>Add</th>
     </thead>
+
     <tbody>
       <% @athletes.each do |athlete| %>
       <tr>
-<!--         <td>
-          <%#= image_tag "icon.png", class: 'avatar-small' %>
-        </td> -->
         <td>
+          <%= image_tag "icon.png", class: 'avatar-small' %>
           <%= athlete.first_name %> <%= athlete.last_name %>
         </td>
         <% case athlete.grad_year %>
@@ -39,12 +31,12 @@
             <td class="text-center grad_year text-success"><%= athlete.grad_year %></td>
         <% end %>
         <td class="text-center">
-<!--           <div class='d-flex justify-content-around'>
-            <%#= c = ISO3166::Country.find_country_by_name(athlete.nationality).emoji_flag if ISO3166::Country.find_country_by_name(athlete.nationality)  %>
-            <span class='nationality d-flex ml-1'> -->
+          <div class='d-flex justify-content-around'>
+            <%= c = ISO3166::Country.find_country_by_name(athlete.nationality).emoji_flag if ISO3166::Country.find_country_by_name(athlete.nationality)  %>
+            <span class='nationality d-flex ml-1'>
               <%= athlete.nationality %>
-<!--             </span> -->
-<!--           </div> -->
+             </span>
+          </div>
         </td>
         <td class="text-center rating"><%= athlete.rating %></td>
         <td><%= link_to athlete_recruits_path(athlete), method: :post, remote: true do %><i class="fas fa-plus"></i><% end %></td>
@@ -52,67 +44,9 @@
       <% end %>
     </tbody>
   </table>
-
-<!--  <table class="table table-boredered table-hover">
-  <table id="dtVerticalScrollExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
-    <thead>
-      <tr class="athlete-table-header pt-3">
-        <th scope='col' class="text-left sort" data-sort='name'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Name</th>
-        <th scope='col' class="text-center sort" data-sort='grad_year' >Graduation Year</th>
-        <th scope='col' class="text-center sort" data-sort='nationality'>Nationality</th>
-        <th scope='col' class="text-center sort" data-sort='rating'>Rating</th>
-        <th scope='col' class="text-center sort"></th>
-        <th scope='col' class="text-center sort"></th>
-      </tr>
-    </thead>
-   <div class="table-wrapper-scroll-y my-custom-scrollbar">
-    <tbody>
-      <% @athletes.each do |athlete| %>
-        <tr class="athlete-table-content">
-          <th scope='row'>
-            <div class='d-flex justify-content-start'>
-              <%= image_tag "icon.png", class: 'avatar-small' %>
-            <span class='name d-flex ml-4'>
-                <%= athlete.first_name %> <%= athlete.last_name %>
-            </span>
-            </div>
-          </th>
-          <% case athlete.grad_year %>
-          <% when 2022 %>
-            <td class="text-center grad_year text-danger"><%= athlete.grad_year %></td>
-          <% when 2023 %>
-            <td class="text-center grad_year text-primary"><%= athlete.grad_year %></td>
-          <% when 2024 %>
-            <td class="text-center grad_year text-info"><%= athlete.grad_year %></td>
-          <% when 2025 %>
-            <td class="text-center grad_year text-success"><%= athlete.grad_year %></td>
-          <% end %>
-
-          <td class="text-center">
-            <div class='d-flex justify-content-around'>
-              <%= c = ISO3166::Country.find_country_by_name(athlete.nationality).emoji_flag if ISO3166::Country.find_country_by_name(athlete.nationality)  %>
-               <span class='nationality d-flex ml-1'>
-                 <%= athlete.nationality %>
-                </span>
-            </div>
-            </td>
-          <td class="text-center rating"><%= athlete.rating %></td>
-          <td><%= link_to 'VIEW', athlete %></td>
-          <td><%= link_to athlete_recruits_path(athlete), method: :post, remote: true do %><i class="fas fa-plus"></i><% end %>
-        </tr>
-      <% end %>
-    </tbody>
-    </div>
-  </table>
+  </div>
+  </div>
 </div>
-</div>
-</div> -->
-
-<script type="text/javascript">
-  $(document).ready(function() {
-    $('#dashboard_athlete').DataTable();
-  });
-</script>
 
 
 
