Revert "Dashboard stuffz"

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,6 +2,7 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+@import "banner";
 @import "footer";
 @import "buttons";
 @import "ourteam";
@@ -12,4 +13,3 @@
 @import "forms";
 @import "header";
 @import "cards";
-@import "upcomingevent";
