--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,40 +1,26 @@
 .dashboard {
-  .nav {
-    a {
-      color: #d57149;
+  img {
+    height: 300px;
+  }
+
+  h1 {
+    font-size: 80px;
+  }
+
+  p {
+    font-size: 30px;
+    color: #393e46;
+  }
+
+  .color {
+    color: #d57149;
+
+    .active {
+      background-color: #d57149;
     }
   }
 
-  .nav-pills .active {
-    background-color: #d57149;
+  .flex-column {
+    border-right: 2px #d57149 solid;
   }
-}
-
-.dashboard-athlete {
-  tbody {
-    height: 300px;
-    overflow: auto;
-  }
-}
-
-.my-custom-scrollbar {
-position: relative;
-height: 200px;
-overflow: auto;
-}
-.table-wrapper-scroll-y {
-display: block;
-}
-
-table.dataTable thead .sorting:after,
-table.dataTable thead .sorting:before,
-table.dataTable thead .sorting_asc:after,
-table.dataTable thead .sorting_asc:before,
-table.dataTable thead .sorting_asc_disabled:after,
-table.dataTable thead .sorting_asc_disabled:before,
-table.dataTable thead .sorting_desc:after,
-table.dataTable thead .sorting_desc:before,
-table.dataTable thead .sorting_desc_disabled:after,
-table.dataTable thead .sorting_desc_disabled:before {
-bottom: .5em;
 }
