--- a/app/views/athletes/index.html.erb
+++ b/app/views/athletes/index.html.erb
@@ -2,21 +2,31 @@
 <div class='mx-5 mb-5 athlete-index-card mt--5'>
 <div class="my-1 container athlete-index">
 
+  <h1>Athletes</h1>
 
-  <div class="table-responsive">
 
-  <table class="table table-striped table-hover" id="athlete-index">
-    <h1>Athletes</h1>
+
+  <div class='input-group-prepend'>
+        <%= render 'shared/search' %>
+  </div>
+
+
+ <div class="table-responsive">
+
+  <table class="table table-boredered table-hover">
     <thead>
       <tr class="athlete-table-header pt-3">
-        <th>Name</th>
-        <th>Graduation Year</th>
-        <th class="text-center">Nationality</th>
-        <th class="text-center">Team</th>
-        <th class="text-center">Team URL</th>
-        <th class="text-center">Rating</th>
+        <th class="text-left sort" data-sort='name'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Name</th>
+        <th class="text-center sort" data-sort='grad_year' >Graduation Year</th>
+        <th class="text-center sort" data-sort='nationality' colspan="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nationality</th>
+        <th class="text-center sort" data-sort='athlete_team'>Team</th>
+        <th class="text-center sort" data-sort='athlete_team_url'>Team URL</th>
+        <th class="text-center sort" data-sort='rating'>Rating&nbsp;&nbsp;</th>
+        <th class="text-center sort"></th>
+        <th class="text-center sort"></th>
       </tr>
     </thead>
+  <div class="table-wrapper-scroll-y table-custom-scrollbar">
     <tbody>
       <% @athletes.each do |athlete| %>
         <tr class="athlete-table-content">
@@ -30,28 +40,23 @@
             </div>
           </th>
           <% case athlete.grad_year %>
-            <% when 2022 %>
-              <td class="text-center grad_year text-danger"><%= athlete.grad_year %></td>
-            <% when 2023 %>
-              <td class="text-center grad_year text-primary"><%= athlete.grad_year %></td>
-            <% when 2024 %>
-              <td class="text-center grad_year text-info"><%= athlete.grad_year %></td>
-            <% when 2025 %>
-              <td class="text-center grad_year text-success"><%= athlete.grad_year %></td>
+          <% when 2022 %>
+            <td class="text-center grad_year text-danger"><%= athlete.grad_year %></td>
+          <% when 2023 %>
+            <td class="text-center grad_year text-primary"><%= athlete.grad_year %></td>
+          <% when 2024 %>
+            <td class="text-center grad_year text-info"><%= athlete.grad_year %></td>
+          <% when 2025 %>
+            <td class="text-center grad_year text-success"><%= athlete.grad_year %></td>
           <% end %>
-          <td class="text-center">
-            <div class='d-flex justify-content-around'>
-              <%= c = ISO3166::Country.find_country_by_name(athlete.nationality).emoji_flag if ISO3166::Country.find_country_by_name(athlete.nationality)  %>
-              <span class='nationality d-flex ml-1'>
-                <%= athlete.nationality %>
-              </span>
-            </div>
-          </td>
+
+          <td class="text-right nationality"><%= athlete.nationality %></td>
+          <td class="text-left emoji_flag"><%= c = ISO3166::Country.find_country_by_name(athlete.nationality).emoji_flag if ISO3166::Country.find_country_by_name(athlete.nationality)  %></td>
           <td class="text-center"><%= athlete.athlete_team %></td>
           <td class="text-center"><%= athlete.athlete_team_url %></td>
           <td class="text-center rating"><%= athlete.rating %></td>
           <td><%= link_to 'VIEW', athlete %></td>
-          <td><%= link_to athlete_recruits_path(athlete), method: :post, remote: true do %><i class="fas fa-plus"></i><% end %></td>
+          <td><%= link_to athlete_recruits_path(athlete), method: :post, remote: true do %><i class="fas fa-plus"></i><% end %>
         </tr>
       <% end %>
     </tbody>
