--- a/app/views/simple_calendar/_week_calendar.html.erb
+++ b/app/views/simple_calendar/_week_calendar.html.erb
@@ -1,12 +1,12 @@
 <div class="simple-calendar">
-  <div class="calendar-heading d-flex justify-content-between">
-    <%= link_to calendar.url_for_previous_view do %><i class="fas fa-arrow-circle-left ml-2"></i><% end %>
+  <div class="calendar-heading">
+    <%= link_to t('simple_calendar.previous', default: '◀︎'), calendar.url_for_previous_view %>
     <% if calendar.number_of_weeks == 1 %>
       <span class="calendar-title">Week <%= calendar.week_number %></span>
     <%else%>
         <span class="calendar-title">Week <%= calendar.week_number %> - <%= calendar.end_week %></span>
     <%end%>
-        <%= link_to calendar.url_for_next_view do %><i class="fas fa-arrow-circle-right mr-2"></i><% end %>
+        <%= link_to t('simple_calendar.next', default: '▶︎'), calendar.url_for_next_view %>
   </div>
 
   <table class="table table-striped">
