--- a/app/views/athletes/_athletes.html.erb
+++ b/app/views/athletes/_athletes.html.erb
@@ -1,41 +1,28 @@
-<div class='mt-5 athlete-index-card'>
-<div class="mt-1 container athlete-index-table">
-
-  <h1>Top <%= current_user.team.sport.name  %> Athletes</h1>
-
-
-  <div class='input-group-prepend'>
-        <%= render 'shared/search' %>
-  </div>
+<div class='mt-3 mb-5 athlete-index-card'>
+<div class="mt-3 mb-5 container athlete-index-table">
 
   <div class="table-responsive">
 
-  <table class="table table-boredered table-hover">
+  <table id ="dashboard_athlete" class="table table-striped table-hover table-sm">
+    <h1>Top <%= current_user.team.sport.name  %> Athletes</h1>
     <thead>
-      <tr class="athlete-table-header pt-3">
-        <th scope='col' class="text-left sort" data-sort='name'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Name</th>
-        <th scope='col' class="text-center sort" data-sort='grad_year' >Graduation Year</th>
-        <th scope='col' class="text-center sort" data-sort='nationality'>Nationality</th>
-       <!--  <th scope='col' class="text-center sort" data-sort='athlete_team'>Team</th> -->
-        <!-- <th scope='col' class="text-center sort" data-sort='athlete_team_url'>Team URL</th> -->
-        <th scope='col' class="text-center sort" data-sort='rating'>Rating</th>
-        <th scope='col' class="text-center sort"></th>
-        <th scope='col' class="text-center sort"></th>
-      </tr>
+        <th>Name</th>
+        <th>Graduation Year</th>
+        <th>Nationality</th>
+        <th>Rating</th>
+        <th>Add</th>
     </thead>
-  <div class="table-wrapper-scroll-y table-custom-scrollbar">
+
     <tbody>
       <% @athletes.each do |athlete| %>
+
         <tr class="athlete-table-content">
-          <th scope='row'>
-            <div class='d-flex justify-content-start'>
+          <td scope='row'>
               <% number = (1..18).to_a.sample %>
               <%= cl_image_tag "athlete#{number}.jpg", class: 'avatar-small' %>
-            <span class='name d-flex ml-4'>
-                <%= athlete.first_name %> <%= athlete.last_name %>
-            </span>
+              <%= athlete.first_name %> <%= athlete.last_name %>
             </div>
-          </th>
+          </td>
           <% case athlete.grad_year %>
           <% when 2022 %>
             <td class="text-center grad_year text-danger"><%= athlete.grad_year %></td>
@@ -58,12 +45,10 @@
           <!-- <td class="text-center"><%#= athlete.athlete_team %></td> -->
          <!--  <td class="text-center"><%#= athlete.athlete_team_url %></td> -->
           <td class="text-center rating"><%= athlete.rating %></td>
-          <td><%= link_to 'VIEW', athlete %></td>
           <td><%= link_to athlete_recruits_path(athlete), method: :post, remote: true do %><i class="fas fa-plus"></i><% end %>
         </tr>
       <% end %>
     </tbody>
-    </div>
   </table>
 </div>
 </div>
