FIX: table sorting does not work yet

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -10,9 +10,9 @@
   }
 }
 
-.dashboard-athlete {
-  tbody {
-    height: 300px;
-    overflow: auto;
-  }
-}
+// .dashboard-athlete {
+//   tbody {
+//     height: 300px;
+//     overflow: auto;
+//   }
+// }
