--- a/app/views/athletes/_athletes.html.erb
+++ b/app/views/athletes/_athletes.html.erb
@@ -1,56 +1,56 @@
 <div class='mt-3 mb-5 athlete-index-card'>
-<div class="mt-3 mb-5 container athlete-index-table">
+  <div class="mt-3 mb-5 container athlete-index-table">
 
-  <div class="table-responsive">
+    <div class="table-responsive">
 
-  <table id ="dashboard_athlete" class="table table-striped table-hover table-sm">
-    <h1>Top <%= current_user.team.sport.name  %> Athletes</h1>
-    <thead>
-        <th>Name</th>
-        <th>Graduation Year</th>
-        <th>Nationality</th>
-        <th>Rating</th>
-        <th>Add</th>
-    </thead>
+    <table id ="dashboard_athlete" class="display table table-striped table-hover table-sm">
+      <h1>Top <%= current_user.team.sport.name  %> Athletes</h1>
+      <thead>
+          <th>Name</th>
+          <th>Graduation Year</th>
+          <th>Nationality</th>
+          <th>Rating</th>
+          <th>Add</th>
+      </thead>
 
-    <tbody>
-      <% @athletes.each do |athlete| %>
+      <tbody>
+        <% @athletes.each do |athlete| %>
 
-        <tr>
-          <td>
-              <% number = (1..18).to_a.sample %>
-              <%= cl_image_tag "athlete#{number}.jpg", class: 'avatar-small mr-2' %>
-              <%= athlete.first_name %> <%= athlete.last_name %>
-          </td>
-          <% case athlete.grad_year %>
-          <% when 2022 %>
-            <td class="text-center grad_year text-danger"><%= athlete.grad_year %></td>
-          <% when 2023 %>
-            <td class="text-center grad_year text-primary"><%= athlete.grad_year %></td>
-          <% when 2024 %>
-            <td class="text-center grad_year text-info"><%= athlete.grad_year %></td>
-          <% when 2025 %>
-            <td class="text-center grad_year text-success"><%= athlete.grad_year %></td>
-          <% end %>
+          <tr>
+            <td>
+                <% number = (1..18).to_a.sample %>
+                <%= cl_image_tag "athlete#{number}.jpg", class: 'avatar-small mr-2' %>
+                <%= athlete.first_name %> <%= athlete.last_name %>
+            </td>
+            <% case athlete.grad_year %>
+            <% when 2022 %>
+              <td class="text-center grad_year text-danger"><%= athlete.grad_year %></td>
+            <% when 2023 %>
+              <td class="text-center grad_year text-primary"><%= athlete.grad_year %></td>
+            <% when 2024 %>
+              <td class="text-center grad_year text-info"><%= athlete.grad_year %></td>
+            <% when 2025 %>
+              <td class="text-center grad_year text-success"><%= athlete.grad_year %></td>
+            <% end %>
 
-          <td>
-            <div class='d-flex justify-content-around'>
-              <%= c = ISO3166::Country.find_country_by_name(athlete.nationality).emoji_flag if ISO3166::Country.find_country_by_name(athlete.nationality)  %>
-              <span class='nationality d-flex ml-1'>
-                <%= athlete.nationality %>
-              </span>
-            </div>
-          </td>
-          <!-- <td class="text-center"><%#= athlete.athlete_team %></td> -->
-         <!--  <td class="text-center"><%#= athlete.athlete_team_url %></td> -->
-          <td><%= athlete.rating %></td>
-          <td><%= link_to athlete_recruits_path(athlete), method: :post, remote: true do %><i class="fas fa-plus"></i><% end %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
-</div>
+            <td>
+              <div class='d-flex justify-content-around'>
+                <%= c = ISO3166::Country.find_country_by_name(athlete.nationality).emoji_flag if ISO3166::Country.find_country_by_name(athlete.nationality)  %>
+                <span class='nationality d-flex ml-1'>
+                  <%= athlete.nationality %>
+                </span>
+              </div>
+            </td>
+            <!-- <td class="text-center"><%#= athlete.athlete_team %></td> -->
+           <!--  <td class="text-center"><%#= athlete.athlete_team_url %></td> -->
+            <td><%= athlete.rating %></td>
+            <td><%= link_to athlete_recruits_path(athlete), method: :post, remote: true do %><i class="fas fa-plus"></i><% end %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    </div>
+  </div>
 </div>
 
 
