FIX: athlete table sortable

--- a/app/views/athletes/_athletes.html.erb
+++ b/app/views/athletes/_athletes.html.erb
@@ -3,7 +3,7 @@
 
     <div class="table-responsive">
 
-    <table id ="dashboard_athlete" class="display table table-striped table-hover table-sm">
+    <table id ="dashboard_athlete" class="table table-striped table-hover table-sm">
       <h1>Top <%= current_user.team.sport.name  %> Athletes</h1>
       <thead>
           <th>Name</th>
