--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
 
-  <body>
+  <body style="background-color: #ECECEC">
     <%= render partial: 'shared/navbar', locals: { chatroom: @chatroom, message: @message } %>
     <%= render 'shared/flashes' %>
 
